default/objects/Student__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <label>BirthDate</label>
    <type>Date</type>
</CustomField>