default/objects/Student__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nashik</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Malegao</fullName>
            </value>
            <value>
                <fullName>Surat</fullName>
            </value>
            <value>
                <fullName>Ahmadabad</fullName>
            </value>
            <value>
                <fullName>Bhopal</fullName>
            </value>
            <value>
                <fullName>Indore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>