default/objects/Student__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M.Tech</fullName>
            </value>
            <value>
                <fullName>B.Tech</fullName>
            </value>
            <value>
                <fullName>Mca</fullName>
            </value>
            <value>
                <fullName>Msc</fullName>
            </value>
            <value>
                <fullName>Mba</fullName>
            </value>
            <value>
                <fullName>Bca</fullName>
            </value>
            <value>
                <fullName>Bsc</fullName>
            </value>
            <value>
                <fullName>Bba</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>