default/objects/Student__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>Name &amp;&quot; &quot;&amp; Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>