default/objects/Student__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Gujrat</fullName>
            </value>
            <value>
                <fullName>Madhya Pradesh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>