default/objects/Student__c/fields/Subjects__c.field-meta.xml
<CustomField>
    <fullName>Subjects__c</fullName>
    <label>Subjects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eng</fullName>
            </value>
            <value>
                <fullName>Phy</fullName>
            </value>
            <value>
                <fullName>Chem</fullName>
            </value>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Bio</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>Social Sci</fullName>
            </value>
            <value>
                <fullName>Cyber Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>