default/objects/Student__c/fields/TeacherLookup__c.field-meta.xml
<CustomField>
    <fullName>TeacherLookup__c</fullName>
    <label>Teacher</label>
    <referenceTo>Teacher__c</referenceTo>
    <relationshipName>Students1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>