default/objects/Student__c/fields/Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees__c</fullName>
    <formula>Fees__c -( Fees__c * Discount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>