default/objects/Student__c/recordTypes/PG.recordType-meta.xml
<RecordType>
    <fullName>PG</fullName>
    <active>true</active>
    <label>PG</label>
</RecordType>