default/objects/Student__c/recordTypes/UG.recordType-meta.xml
<RecordType>
    <fullName>UG</fullName>
    <active>true</active>
    <label>UG</label>
</RecordType>