default/objects/Student__c/validationRules/FeesNotGreaterThanFiftyThousand.validationRule-meta.xml
<ValidationRule>
    <fullName>FeesNotGreaterThanFiftyThousand</fullName>
    <active>true</active>
    <errorConditionFormula>Fees__c    &gt; 200000</errorConditionFormula>
    <errorDisplayField>Fees__c</errorDisplayField>
    <errorMessage>Fees Should be less than 200000</errorMessage>
</ValidationRule>