default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Course__c</columns>
    <columns>Total_Fees__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>